# shellborn

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
shellborn/: Cargo.toml
shellborn-cli/: Cargo.toml
shellborn-cli/src/: main.rs
shellborn-cli/tests/: cli.rs
shellborn/examples/: ellipse.rs  entity.rs
shellborn/res/: example.sbn
shellborn/src/: lib.rs
shellborn/src/attribute/: attribute.rs  attribute_decoration.rs  builder.rs  mod.rs
shellborn/src/entity/: builder.rs  entity.rs  entity_decoration.rs  mod.rs
shellborn/src/forms/: entity_type.rs
shellborn/src/position/: mod.rs
shellborn/src/positioned/: mod.rs
shellborn/src/relation/: builder.rs  cardinality.rs  connection.rs  mod.rs  relation.rs
shellborn/src/render/svg/: mod.rs  render_able.rs  svg_renderer.rs  text.rs  view_box.rs
shellborn/tests/: attributes.rs  entity.rs  relations.rs
