[package]
name = "shellborn-cli"
version = "0.1.0"
edition = "2021"
authors=["Jonas Pfeifer", "Tobias Frischmann"]


[dependencies]
shellborn = { path = "../shellborn" }
clap = { version = "4.4.10", features = ["derive"] }
clap-verbosity-flag = { version = "2.1.0" }
anyhow = "1.0.75"
env_logger = "0.11.0"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
